Finalized the color scheme
forest!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="blog-header">
       <div class="container">
         <h1 class="blog-title">Welcome to My Development Blog!</h1>
-        <p class="lead blog-description">A blog about all things code.</p>
+        <p class="lead blog-description">A blog about all things code</p>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
             <p>This blog chronicles my time in General Assembly and all that I've learned while going through this program. It is also a space to post interesting new things I learn about development and code!</p>
           </div>
 
-          <div class="sidebar-module">
+          <div class="sidebar-module1">
             <h4>Where to Find Me</h4>
             <ol class="list-unstyled">
               <li><a href="https://github.com/Hadleyana" target="_blank">GitHub</a></li>
