--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
           </form>
         </div>
 
+        <br></br>
+
         <div>
           <form class="sign-out" id="signOut">
             <button id="sign-out" type="submit" class="btn-default" disabled> Sign Out </button>
           </form>
         </div>
 
+        <br></br>
+
         <div>
-          <form id="new-post" class="hidden">
+          <form id="new-post" class="hidden card card-default">
             <fieldset>
               <legend>Create New Post Below</legend>
               <input type="text" name="title" placeholder="Title">
@@ -67,20 +71,15 @@
           </form>
         </div>
 
+        <br></br>
+
         <div class="blog-post">
-          <table id="posts">
-            <tr>
-              <th></th>
-            </tr>
-            <tr>
-              <td></td>
-            </tr>
-          </table>
+          <div id="empty-post-template">
+          </div>
           <!-- same div different forms -->
-          <form id="updatePost" class="hidden">
+          <form id="updatePost" class="hidden card card-default">
             <fieldset>
               <legend>Update Post Below</legend>
-              <input type="number" name="id" placeholder="id">
               <input type="text" name="title" placeholder="Title">
               <textarea name="content" cols="25" rows="3" placeholder=" New Content"></textarea>
               <input type="submit" name="submit" class="btn-default" value="Update!">
@@ -99,7 +98,13 @@
           <p>This blog chronicles my time in General Assembly and all that I've learned while going through this program. It is also a space to post interesting new things I learn about development and code!</p>
         </div>
         <div class="sidebar-module1">
+
+                  <br></br>
+
           <button type="button" id="get-posts" class="btn btn-default" style="page-break-after: always;">Get Posts!</button>
+
+                  <br></br>
+
         </div>
         <div class="sidebar-module1">
           <h4>Where to Find Me</h4>
@@ -121,3 +126,4 @@
   <footer class="blog-footer">
     <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
   </footer>
+</html>
